SERVER-133988 Add timeout to resharding validation collection size estimation (#61718)

GitOrigin-RevId: e453b1f3c01f16851f680a47eb163734e7657649